--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -5,10 +5,10 @@
   border-radius:25px;
   padding:0.4rem 1rem;
   font-size:0.9rem;
+  transition: opacity 0.2s;
 }
 .search-btn:hover{
-  background-color:#fe424d;
-  color:#fff;
+  opacity: 0.9;
 }
 .search-btn i{
   margin-right:0.5rem;
@@ -22,17 +22,16 @@
 }
 
 .navbar{
-  padding-top:0.9rem;
-  padding-bottom:0.9rem;
+  padding:0.9rem 0;
   min-height:75px;
   z-index:1000;
 }
-
 .container-fluid{
   padding-left:1rem;
   padding-right:1rem;
 }
 
+/* Responsive */
 @media(max-width:768px){
   .search-btn{
     width:100%;
@@ -41,7 +40,6 @@
     width:100%;
   }
 }
-
 @media(min-width:768px){
   .search-inp{
     width:420px;
@@ -51,7 +49,6 @@
 
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-
     <a class="navbar-brand" href="/listings">
       <i class="fa-regular fa-compass"></i>
     </a>
@@ -63,13 +60,11 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-
-     
- <div class="navbar-nav">
+      <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-      <form class="d-flex flex-column flex-md-row gap-2 mx-auto"
+      <form class="d-flex flex-column flex-md-row gap-3 mx-auto"
             role="search"
             action="/listings/search"
             method="GET">
@@ -83,8 +78,8 @@
       </form>
 
       <div class="navbar-nav ms-md-3">
-        <a class="nav-link" href="/listings/new">Airbnb your home</a> 
-        <% if(!currUser) { %>
+        <a class="nav-link" href="/listings/new">Airbnb your home</a>
+<% if(!currUser) { %>
           <a class="nav-link" href="/signup"><b>Sign Up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
         <% } %>
@@ -92,7 +87,6 @@
           <a class="nav-link" href="/logout"><b>Log out</b></a> 
         <% } %>
       </div>
-
     </div>
   </div>
 </nav>
