--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,9 @@
 <style>
+/* Prevent content hiding under sticky navbar */
+.page-content{
+  padding-top: 100px;
+}
+/* Search Button /
 .search-btn{
   background-color:#fe424d;
   color:#fff;
@@ -6,40 +11,45 @@
   padding:0.4rem 1rem;
   font-size:0.9rem;
   transition: opacity 0.2s;
+  border:none;
 }
+
 .search-btn:hover{
   opacity: 0.9;
+  color:#fff;
 }
+
 .search-btn i{
   margin-right:0.5rem;
 }
+
+/ Search Input /
 .search-inp{
   border-radius:25px;
   padding:0.4rem 0.9rem;
-  flex:1;
-  min-width:0;
   font-size:0.9rem;
 }
 
+/ Navbar /
 .navbar{
   padding:0.9rem 0;
   min-height:75px;
-  z-index:1000;
-}
-.container-fluid{
-  padding-left:1rem;
-  padding-right:1rem;
+  background-color:white;
 }
 
-/* Responsive */
+/ Fix collapse overlap /
+.navbar-collapse{
+  background-color:white;
+}
+
+/ Responsive Fix */
 @media(max-width:768px){
-  .search-btn{
-    width:100%;
-  }
+  .search-btn,
   .search-inp{
     width:100%;
   }
 }
+
 @media(min-width:768px){
   .search-inp{
     width:420px;
@@ -47,24 +57,33 @@
 }
 </style>
 
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+
+<nav class="navbar navbar-expand-md border-bottom sticky-top">
   <div class="container-fluid">
+
+    <!-- Logo -->
     <a class="navbar-brand" href="/listings">
       <i class="fa-regular fa-compass"></i>
     </a>
 
+    <!-- Toggle Button -->
     <button class="navbar-toggler" type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup">
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+<!-- Navbar Content -->
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+      <!-- Left Links -->
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-      <form class="d-flex flex-column flex-md-row gap-3 mx-auto"
+      <!-- Search Form -->
+      <form class="d-flex flex-column flex-md-row gap-3 mx-md-auto my-2 my-md-0"
             role="search"
             action="/listings/search"
             method="GET">
@@ -77,16 +96,20 @@
         </button>
       </form>
 
+      <!-- Right Links -->
       <div class="navbar-nav ms-md-3">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
-    <% if(!currUser) { %>
+
+        <% if(!currUser) { %>
           <a class="nav-link" href="/signup"><b>Sign Up</b></a>
           <a class="nav-link" href="/login"><b>Log in</b></a>
         <% } %> 
+
         <% if(currUser) { %>
           <a class="nav-link" href="/logout"><b>Log out</b></a> 
         <% } %>
       </div>
+
     </div>
   </div>
 </nav>
