--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,7 @@
 <style>
 /* Prevent content hiding under sticky navbar */
 .page-content{
-  padding-top: 100px;
+  padding-top: 90px;
 }
 /* Search Button */
 .search-btn{
@@ -58,7 +58,7 @@
 </style>
 
 
-<nav class="navbar navbar-expand-md border-bottom sticky-top">
+<nav class="navbar navbar-expand-md border-bottom fixed-top">
   <div class="container-fluid">
 
     <!-- Logo -->
